resources/ej2-base/releasenotes/WP8/Release-Notes/WP-WinRT/v14.2.0.28/DocIO.md
## DocIO

### Features
{:#docio-features}

* \#158446 - Support to access and modify `AllowOverlap` for a Textbox has been added

### Bug fixes
{:#docio-bug-fixes}

* \#156461 - Symbol preservation issue has been fixed while resaving the particular RTF document
* \#156461 - Table header row is now preserved properly while resaving the particular RTF document
* \#156461 – Document contents preservation issue has been fixed while resaving a particular RTF document
* \#158390 - Special characters is now preserved properly while resaving the RTF document
* \#156461 - TOC alignment is now preserved properly in RTF to Word conversion
* \#156461 - Image preservation issue has been resolved in RTF to Word conversion
* \#159078 - AutoHyphenation setting is now preserved properly while resaving the Word document as RTF file
* \#159658 - Line break is now preserved properly in Word to RTF conversion
* \#159668 - Paragraph style is now preserved properly while resaving the RTF document
* \#158263 – TOC text contents are now preserved properly while resaving the particular Word document
* \#160117 – NullReferenceException will no longer thrown while performing Mail merge using ExpandoObjects.
* \#160072 - EndGroup merge field preservation issue while using RemoveEmptyGroup has been resolved
* \#159331 - Line spacing preservation issue while resaving a particular Word document
* \#157651 – ArithmeticException will no longer thrown while parsing DOC format Word document
* \#159459 – Date format with invalid value is now preserved properly while performing Mail merge
* \#159300 – ArgumentOutOfRangeException will no longer thrown while inserting a section break using `InsertSectionBreak` API
* \#159295 - ArgumentOutOfRangeException will no longer thrown while opening the DOCX format document
